--- a/Udalosti/Autentifikacia/Base.lproj/Autentifikacia.storyboard
+++ b/Udalosti/Autentifikacia/Base.lproj/Autentifikacia.storyboard
@@ -18,13 +18,22 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Autentifikacia-->
         <scene sceneID="1sB-ya-J1W">
             <objects>
-                <navigationController id="ayh-Cd-cBl" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zfr-QH-NMv">
+                <navigationController storyboardIdentifier="Autentifikacia" id="ayh-Cd-cBl" customClass="Autentifikacia" customModule="Udalosti" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="zfr-QH-NMv">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.16862745098039217" green="0.38823529411764707" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Raleway-Bold" family="Raleway" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="Raleway-Regular" family="Raleway" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="5UK-7O-fHe" kind="relationship" relationship="rootViewController" id="l6i-Kf-2Ea"/>
@@ -37,7 +46,7 @@
         <!--Udalosti-->
         <scene sceneID="73j-Tl-7Xv">
             <objects>
-                <viewController title="Udalosti" id="5UK-7O-fHe" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Prihlasenie" title="Udalosti" id="5UK-7O-fHe" customClass="Prihlasenie" customModule="Udalosti" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jTp-od-b1A">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,7 +126,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ZQO-v5-zNB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Domov" id="87J-7F-Tqi">
+                    <navigationItem key="navigationItem" id="87J-7F-Tqi">
                         <barButtonItem key="backBarButtonItem" title="Späť" id="Jrk-wh-NyN"/>
                     </navigationItem>
                     <connections>
@@ -128,10 +137,10 @@
             </objects>
             <point key="canvasLocation" x="0.80000000000000004" y="24.7376311844078"/>
         </scene>
-        <!--Registrácia-->
+        <!--Registracia-->
         <scene sceneID="KJI-8g-2VV">
             <objects>
-                <viewController title="Registrácia" id="pR6-gF-o9U" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Registracia" id="pR6-gF-o9U" customClass="Registracia" customModule="Udalosti" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QFv-nE-x3V">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -204,17 +213,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Registrovať" backgroundImage="udalosti_tlacidlo"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Udalosti" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWL-BN-1ml">
-                                <rect key="frame" x="116" y="105" width="188" height="58"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Registrácia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWL-BN-1ml">
+                                <rect key="frame" x="62" y="104" width="250" height="58"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Raleway-Regular" family="Raleway" pointSize="49"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="udalosti_logo" translatesAutoresizingMaskIntoConstraints="NO" id="ywL-5Z-DVh">
-                                <rect key="frame" x="71" y="109" width="37" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="mi5-fE-wbZ"/>
@@ -234,4 +239,5 @@
     <inferredMetricsTieBreakers>
         <segue reference="hWV-bf-dHt"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
